--- a/sass/components/activeline.scss
+++ b/sass/components/activeline.scss
@@ -54,9 +54,15 @@
         }
     }
     @media only screen and (max-width:840px) {
-        &{
+        & {
             width: 95%;
-    margin-left: 1.3rem;
+            margin-left: 1.3rem;
+        }
+    }
+    @media only screen and (max-width:600px) {
+        & {
+            width: 98%;
+            margin-left: 0.5rem;
         }
     }
     &--btn {
