--- a/sass/components/story.scss
+++ b/sass/components/story.scss
@@ -6,11 +6,11 @@
             width: 105%;
         }
     }
-    @media only screen  and (max-width:790px){
-&{
-    width: 85%;
-}
- }
+    @media only screen and (max-width:790px) {
+        & {
+            width: 85%;
+        }
+    }
     &--grid {
         width: 81.4%;
         height: 80%;
@@ -44,26 +44,23 @@
             }
         }
         @media only screen and (max-width:840px) {
-            &{
+            & {
                 width: 115%;
-           margin-left: 1rem;
-
+                margin-left: 1rem;
             }
         }
         @media only screen and (max-width:790px) {
-            &{
-        grid-template-columns: repeat(5, 23%);
+            & {
+                grid-template-columns: repeat(5, 23%);
                 margin-left: 0rem;
-            width: 115%;
-            }
-
-        }
-        @media only screen and (max-width:650px) {
-            &{
                 width: 115%;
             }
         }
-
+        @media only screen and (max-width:650px) {
+            & {
+                width: 115%;
+            }
+        }
         &--box {
             text-align: center;
             overflow: hidden;
@@ -75,7 +72,6 @@
             -moz-border-radius: 1rem;
             -ms-border-radius: 1rem;
             -o-border-radius: 1rem;
-         
             &--img {
                 width: 100%;
                 height: 75%;
@@ -314,6 +310,12 @@
         & {
             position: absolute;
             margin-left: 20rem;
+        }
+    }
+    @media only screen and (max-width:990px) {
+        & {
+            visibility: hidden;
+            display: none;
         }
     }
 }
