--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,7 +4,8 @@
 @import"extra/extra.scss";
 @import"animation/animation.scss";
 @import"function/function.scss";
-@import"mobile/res-navbar.scss";
+@import"mobile/navbar/res-navbar.scss";
+@import"mobile/navbar/res-navbar-bottom.scss";
 @import"mobile/res-extra.scss";
 @import"layout/backbone.scss";
 @import"layout/sidebar.scss";
