grid of story section reposnsive ios almiosrb complet6e

--- a/sass/mobile/navbar/res-navbar-bottom.scss
+++ b/sass/mobile/navbar/res-navbar-bottom.scss
@@ -1,6 +1,6 @@
 .nav-responsive--bottom {
     width: 100vw;
-    height: 10vh;
+    height: 6rem;
     background-color: #242526;
     display: grid;
     grid-template-rows: repeat(1, 100%);
@@ -11,15 +11,16 @@
         display: grid;
         grid-template-rows: 100%;
         grid-template-columns: repeat(6, 16.6%);
-        margin-bottom: 0.5rem;
+        margin-left: 2.5rem;
         margin-top: 1.5rem;
         &--icon-box {
             display: flex;
-            align-items: flex-end;
+            align-items: flex-start;
             justify-items: center;
             align-content: center;
             justify-content: center;
-            border-bottom: #2374e1;
+            border-top: #2374e1;
+            margin-right: 2.5rem;
             &--icon {
                 height: 2.8rem;
                 width: 2.8rem;
