--- a/css/style.css
+++ b/css/style.css
@@ -1646,7 +1646,7 @@ body {
 
 .nav-responsive {
   width: 100vw;
-  height: 10vh;
+  height: 6rem;
   background-color: #242526;
   display: grid;
   grid-template-rows: repeat(1, 100%);
@@ -1661,7 +1661,7 @@ body {
     display: grid;
     grid-template-rows: 100%;
     grid-template-columns: 80% repeat(2, 10%);
-    margin-top: 0.4rem; }
+    margin-top: 0.7rem; }
     .nav-responsive--logo-con--messenger-circle {
       background-color: #3a3b3c;
       width: 3rem;
@@ -1671,7 +1671,7 @@ body {
       -moz-border-radius: 50%;
       -ms-border-radius: 50%;
       -o-border-radius: 50%;
-      margin-top: 0.7rem;
+      margin-top: 0.8rem;
       display: flex;
       align-items: center;
       justify-items: center;
@@ -1695,7 +1695,7 @@ body {
       -moz-border-radius: 50%;
       -ms-border-radius: 50%;
       -o-border-radius: 50%;
-      margin-top: 0.7rem;
+      margin-top: 0.8rem;
       display: flex;
       align-items: center;
       justify-items: center;
@@ -1717,7 +1717,7 @@ body {
 
 .nav-responsive--bottom {
   width: 100vw;
-  height: 10vh;
+  height: 6rem;
   background-color: #242526;
   display: grid;
   grid-template-rows: repeat(1, 100%);
@@ -1728,15 +1728,16 @@ body {
     display: grid;
     grid-template-rows: 100%;
     grid-template-columns: repeat(6, 16.6%);
-    margin-bottom: 0.5rem;
+    margin-left: 2.5rem;
     margin-top: 1.5rem; }
     .nav-responsive--bottom--icon-con--icon-box {
       display: flex;
-      align-items: flex-end;
+      align-items: flex-start;
       justify-items: center;
       align-content: center;
       justify-content: center;
-      border-bottom: #2374e1; }
+      border-top: #2374e1;
+      margin-right: 2.5rem; }
       .nav-responsive--bottom--icon-con--icon-box--icon {
         height: 2.8rem;
         width: 2.8rem;
@@ -2833,3 +2834,11 @@ body {
           font-weight: bold;
           margin-left: 0.5rem;
           margin-top: 0.4rem; }
+
+.res-story-con {
+  width: 100vw;
+  height: 18rem;
+  border: 2px solid blue;
+  display: grid;
+  grid-template-rows: 100%;
+  grid-template-columns: repeat(5, 20%); }
