--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,3 +15,4 @@
 @import"components/mind.scss";
 @import"components/activeline.scss";
 @import"components/postsection.scss";
+@import"mobile/story-res.scss";
