--- a/sass/mobile/navbar/res-navbar.scss
+++ b/sass/mobile/navbar/res-navbar.scss
@@ -1,6 +1,6 @@
 .nav-responsive {
     width: 100vw;
-    height: 10vh;
+    height: 6rem;
     background-color: #242526;
     display: grid;
     grid-template-rows: repeat(1, 100%);
@@ -17,7 +17,7 @@
         display: grid;
         grid-template-rows: 100%;
         grid-template-columns: 80% repeat(2, 10%);
-        margin-top: 0.4rem;
+        margin-top: 0.7rem;
         &--messenger-circle {
             background-color: #3a3b3c;
             width: 3rem;
@@ -27,7 +27,7 @@
             -moz-border-radius: 50%;
             -ms-border-radius: 50%;
             -o-border-radius: 50%;
-            margin-top: 0.7rem;
+            margin-top: 0.8rem;
             display: flex;
             align-items: center;
             justify-items: center;
@@ -57,7 +57,7 @@
             -moz-border-radius: 50%;
             -ms-border-radius: 50%;
             -o-border-radius: 50%;
-            margin-top: 0.7rem;
+            margin-top: 0.8rem;
             display: flex;
             align-items: center;
             justify-items: center;
