story secti0on is complete

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,4 +15,5 @@
 @import"components/mind.scss";
 @import"components/activeline.scss";
 @import"components/postsection.scss";
-@import"mobile/story-res.scss";
+@import"./mobile/story/story-res.scss";
+@import"./mobile/story/res-story-normal-box.scss";
