--- a/sass/mobile/res-extra.scss
+++ b/sass/mobile/res-extra.scss
@@ -1,3 +1,11 @@
-                        .res-active {
-                            fill: #2374e1 !important;
-                        }
+.res-active {
+fill: #2374e1 !important;
+}
+.bg-res-2{
+    background-image: url("../img/group-story/user-4-story.webp") !important;
+    background-size: cover;
+}
+.bg-res-3{
+    background-image: url("../img/group-story/user-5-strory.webp") !important;
+    background-size: cover;
+}
