--- a/css/style.css
+++ b/css/style.css
@@ -1746,6 +1746,14 @@ body {
 .res-active {
   fill: #2374e1 !important; }
 
+.bg-res-2 {
+  background-image: url("../img/group-story/user-4-story.webp") !important;
+  background-size: cover; }
+
+.bg-res-3 {
+  background-image: url("../img/group-story/user-5-strory.webp") !important;
+  background-size: cover; }
+
 .backbone {
   width: 100vw;
   height: 91.5vh;
@@ -2836,9 +2844,93 @@ body {
           margin-top: 0.4rem; }
 
 .res-story-con {
+  margin-top: 6rem;
   width: 100vw;
   height: 18rem;
-  border: 2px solid blue;
-  display: grid;
-  grid-template-rows: 100%;
-  grid-template-columns: repeat(5, 20%); }
+  background-color: #242526; }
+  .res-story-con--grid {
+    padding-top: 0.4rem;
+    padding-left: 0.5rem;
+    width: 100%;
+    height: 98%;
+    display: grid;
+    grid-template-rows: 100%;
+    grid-template-columns: repeat(4, 25%);
+    overflow-x: scroll;
+    overflow-y: hidden; }
+    .res-story-con--grid--story-box {
+      width: 100%;
+      height: 100%;
+      border-radius: 0.8rem;
+      display: grid;
+      grid-template-rows: 75% 25%;
+      grid-template-columns: 100%;
+      overflow: hidden; }
+      .res-story-con--grid--story-box--img-con {
+        width: 100%;
+        height: 100%; }
+        .res-story-con--grid--story-box--img-con--img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover; }
+      .res-story-con--grid--story-box--upload-con {
+        width: 100%;
+        height: 100%;
+        background-color: #303233; }
+        .res-story-con--grid--story-box--upload-con--txt {
+          color: #fff;
+          font-size: 1.1rem;
+          font-weight: bold;
+          font-family: "Roboto";
+          margin-left: 1.4rem;
+          margin-top: 0.3rem; }
+        .res-story-con--grid--story-box--upload-con--circle {
+          width: 3.5rem;
+          height: 3.5rem;
+          border-radius: 50%;
+          background-color: #2e89ff;
+          margin-top: -1.3rem;
+          margin-left: 3.3rem;
+          display: flex;
+          align-items: center;
+          justify-items: center;
+          align-content: center;
+          justify-content: center;
+          border: 3px solid #303233; }
+          .res-story-con--grid--story-box--upload-con--circle--icon {
+            fill: #fff;
+            width: 2rem;
+            height: 2rem; }
+
+.res-story-con--grid {
+  grid-gap: 0.7rem; }
+  .res-story-con--grid--normal-box {
+    width: 100%;
+    height: 100%;
+    border-radius: 0.8rem;
+    overflow: hidden;
+    background-image: url("../img/group-story/user-3-story.webp");
+    background-size: cover;
+    display: grid;
+    grid-template-rows: 25% repeat(2, 40%);
+    grid-template-columns: 100%; }
+    .res-story-con--grid--normal-box--profile-circle {
+      width: 4rem;
+      height: 4rem;
+      border-radius: 50%;
+      border: 3px solid #ffdf00;
+      margin-top: 0.5rem;
+      margin-left: 0.5rem; }
+      .res-story-con--grid--normal-box--profile-circle--img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 50%; }
+    .res-story-con--grid--normal-box--user-name {
+      grid-row: 3 / 4;
+      color: #fff;
+      font-weight: bold;
+      font-family: 'Roboto';
+      font-size: 1.3rem;
+      text-align: center;
+      margin-top: 2.7rem; }
