mind ection part one is al ost completeed

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,5 +15,6 @@
 @import"components/mind.scss";
 @import"components/activeline.scss";
 @import"components/postsection.scss";
-@import"./mobile/story/story-res.scss";
-@import"./mobile/story/res-story-normal-box.scss";
+@import"mobile/story/story-res.scss";
+@import"mobile/story/res-story-normal-box.scss";
+@import"mobile/mind/res-mind.scss";
