--- a/css/style.css
+++ b/css/style.css
@@ -2844,14 +2844,14 @@ body {
           margin-top: 0.4rem; }
 
 .res-story-con {
-  margin-top: 6rem;
+  margin-top: 0.5rem;
   width: 100vw;
   height: 18rem;
   background-color: #242526; }
   .res-story-con--grid {
     padding-top: 0.4rem;
     padding-left: 0.5rem;
-    width: 100%;
+    width: 98%;
     height: 98%;
     display: grid;
     grid-template-rows: 100%;
@@ -2934,3 +2934,36 @@ body {
       font-size: 1.3rem;
       text-align: center;
       margin-top: 2.7rem; }
+
+.res-mind-con {
+  width: 100vw;
+  height: 10rem;
+  background-color: #242526;
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: repeat(2, 50%); }
+  .res-mind-con--whatinmind {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-rows: 100%;
+    grid-template-columns: 20% 80%; }
+    .res-mind-con--whatinmind--img {
+      display: flex;
+      align-items: center;
+      align-content: center;
+      justify-content: center;
+      justify-items: center; }
+      .res-mind-con--whatinmind--img--img {
+        width: 4.5rem;
+        height: 4.5rem;
+        border-radius: 50%;
+        object-fit: cover;
+        margin-top: -0.5rem; }
+  .res-mind-con--chose-con {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-rows: 100%;
+    grid-template-columns: repeat(3, 33.3%);
+    border: 2px solid blue; }
