--- a/css/style.css
+++ b/css/style.css
@@ -2960,10 +2960,106 @@ body {
         border-radius: 50%;
         object-fit: cover;
         margin-top: -0.5rem; }
+        @media only screen and (max-width: 330px) {
+          .res-mind-con--whatinmind--img--img {
+            width: 4rem;
+            height: 4em; } }
+    .res-mind-con--whatinmind--icon {
+      display: flex;
+      align-items: center;
+      align-content: center;
+      justify-content: center;
+      justify-items: center;
+      visibility: hidden;
+      margin-top: -0.5rem; }
+      @media only screen and (max-width: 400px) {
+        .res-mind-con--whatinmind--icon {
+          visibility: hidden; } }
+    .res-mind-con--whatinmind--search-box--search {
+      outline: none;
+      border: none;
+      width: 95%;
+      height: 4.5rem;
+      border-radius: 2.5rem;
+      background-color: #3a3b3c;
+      margin-left: -1.5rem;
+      padding-left: 1.5rem;
+      padding-top: 0.3rem; }
+      @media only screen and (max-width: 400px) {
+        .res-mind-con--whatinmind--search-box--search {
+          margin-left: -1rem;
+          width: 98%; } }
+      @media only screen and (max-width: 350px) {
+        .res-mind-con--whatinmind--search-box--search {
+          margin-left: -0.5rem; } }
+      @media only screen and (max-width: 330px) {
+        .res-mind-con--whatinmind--search-box--search {
+          width: 98%;
+          height: 4rem; } }
+      .res-mind-con--whatinmind--search-box--search::placeholder {
+        font-size: 1.7rem;
+        font-weight: bold;
+        font-family: "Roboto";
+        color: #b0b3b8;
+        text-overflow: ellipsis; }
   .res-mind-con--chose-con {
     width: 100%;
     height: 100%;
     display: grid;
     grid-template-rows: 100%;
-    grid-template-columns: repeat(3, 33.3%);
-    border: 2px solid blue; }
+    grid-template-columns: repeat(3, 33.3%); }
+    @media only screen and (max-width: 350px) {
+      .res-mind-con--chose-con {
+        grid-template-columns: repeat(2, 50%); } }
+    .res-mind-con--chose-con--live {
+      display: flex;
+      align-items: center;
+      align-content: center;
+      justify-content: center;
+      justify-items: center; }
+      .res-mind-con--chose-con--live--icon {
+        fill: #f3425f;
+        width: 2rem;
+        height: 2rem; }
+        .res-mind-con--chose-con--live--icon--txt {
+          color: #e3e6eb;
+          font-size: 1.2rem;
+          font-weight: 700;
+          font-family: "Roboto";
+          margin-left: 0.8rem; }
+    .res-mind-con--chose-con--photo {
+      display: flex;
+      align-items: center;
+      align-content: center;
+      justify-content: center;
+      justify-items: center; }
+      .res-mind-con--chose-con--photo--icon {
+        fill: #45bd62;
+        width: 2rem;
+        height: 2rem; }
+        .res-mind-con--chose-con--photo--icon--txt {
+          color: #e3e6eb;
+          font-size: 1.2rem;
+          font-weight: 700;
+          font-family: "Roboto";
+          margin-left: 0.8rem; }
+    .res-mind-con--chose-con--feeling {
+      display: flex;
+      align-items: center;
+      align-content: center;
+      justify-content: center;
+      justify-items: center; }
+      @media only screen and (max-width: 350px) {
+        .res-mind-con--chose-con--feeling {
+          visibility: hidden;
+          display: none; } }
+      .res-mind-con--chose-con--feeling--icon {
+        fill: #f7b928;
+        width: 2rem;
+        height: 2rem; }
+        .res-mind-con--chose-con--feeling--icon--txt {
+          color: #e3e6eb;
+          font-size: 1.2rem;
+          font-weight: 700;
+          font-family: "Roboto";
+          margin-left: 0.8rem; }
