post section is alomsrt complete

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,3 +18,4 @@
 @import"mobile/story/story-res.scss";
 @import"mobile/story/res-story-normal-box.scss";
 @import"mobile/mind/res-mind.scss";
+@import"mobile/post/res-post.scss";
