--- a/css/style.css
+++ b/css/style.css
@@ -1498,6 +1498,9 @@ body {
   box-sizing: border-box;
   background-color: #18191A;
   overflow: hidden; }
+  @media only screen and (max-width: 450px) {
+    body {
+      overflow-y: scroll; } }
 
 .active {
   fill: #2374e1 !important; }
@@ -1722,7 +1725,6 @@ body {
   display: grid;
   grid-template-rows: repeat(1, 100%);
   grid-template-columns: 100%;
-  position: fixed;
   bottom: 0%; }
   .nav-responsive--bottom--icon-con {
     display: grid;
@@ -1761,7 +1763,8 @@ body {
   grid-template-rows: 100%;
   grid-template-columns: 22% 56% 22%;
   overflow: hidden;
-  visibility: hidden; }
+  visibility: hidden;
+  display: none; }
 
 .sidebar-con {
   width: 100%;
@@ -3063,3 +3066,23 @@ body {
           font-weight: 700;
           font-family: "Roboto";
           margin-left: 0.8rem; }
+
+.res-post-con {
+  width: 100vw;
+  height: 100vh;
+  border: 2px solid red;
+  margin-top: 0.5rem;
+  overflow-y: scroll; }
+  .res-post-con--grid {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    overflow: scroll; }
+    .res-post-con--grid--post {
+      width: 100%;
+      height: 35rem;
+      background-color: green;
+      display: grid;
+      grid-template-rows: 10% 78% 12%;
+      grid-template-columns: 100%; }
