--- a/sass/base/base.scss
+++ b/sass/base/base.scss
@@ -14,6 +14,11 @@ body {
     box-sizing: border-box;
     background-color: #18191A;
     overflow: hidden;
+    @media only screen and (max-width:450px) {
+        &{
+            overflow-y: scroll;
+        }
+    }
     // & {
     // scrollbar-width: auto;
     // scrollbar-color: transparent transparent
