--- a/sass/mobile/post/res-post.scss
+++ b/sass/mobile/post/res-post.scss
@@ -1,23 +1,95 @@
-.res-post-con{
+.res-post-con {
     width: 100vw;
     height: 100vh;
-    border:2px solid red;
+    border: 2px solid red;
     margin-top: 0.5rem;
-    overflow-y: scroll; 
-    &--grid{
+    overflow-y: scroll;
+
+    &--grid {
         width: 100%;
         height: auto;
         display: flex;
         flex-direction: column;
         overflow: scroll;
-        &--post{
+
+        &--post {
             width: 100%;
             height: 35rem;
             background-color: green;
             display: grid;
-        grid-template-rows: 10% 78% 12%;
-grid-template-columns: 100%;
-        }
-    } 
-}
+            grid-template-rows: 14% 73% 13%;
+            grid-template-columns: 100%;
 
+            &--header {
+                width: 100%;
+                height: 100%;
+                display: grid;
+                grid-template-rows: 100%;
+                grid-template-columns: 15% 60% 25%;
+                background-color: red;
+
+                &--img-con {
+                    width: 100%;
+                    height: 100%;
+                    display: flex;
+                    align-items: center;
+                    align-content: center;
+                    justify-items: center;
+                    justify-content: center;
+
+                    &--img {
+                        margin-top: -0.2rem;
+                        width: 4.5rem;
+                        height: 4.5rem;
+                        object-fit: cover;
+                        border-radius: 50%;
+                    }
+                }
+
+                &--name-con {
+                    width: 100%;
+                    height: 100%;
+                    border: 2px solid green;
+
+                    &--name {
+                        font-size: 1.4rem;
+                        color: #e3e6eb;
+                        font-weight: bold;
+                        font-family: 'Roboto';
+                        margin-top: 0.6rem;
+
+                        &--time {
+                            color: #b0b3b8;
+                            font-size: 1.2rem;
+                            margin-top: 0.3rem;
+                        }
+                    }
+                }
+                &--options{
+                    width: 100%;
+                    height: 100%;
+                    background-color: gold;
+                    display: grid;
+                    grid-template-rows: 100%;
+                    grid-template-columns: repeat(2,50%);
+                    align-items: center;
+                    justify-items: center;
+                    align-content: center;
+                    justify-content: center;
+                }
+            }
+
+            &--main {
+                width: 100%;
+                height: 100%;
+                background-color: blue;
+            }
+
+            &--footer {
+                width: 100%;
+                height: 100%;
+                background-color: orange;
+            }
+        }
+    }
+}
