--- a/css/style.css
+++ b/css/style.css
@@ -3080,19 +3080,21 @@ body {
     flex-direction: column;
     overflow: scroll; }
     .res-post-con--grid--post {
-      width: 100%;
+      width: 97%;
+      margin-left: 0.5rem;
       height: 35rem;
       background-color: green;
       display: grid;
       grid-template-rows: 14% 73% 13%;
-      grid-template-columns: 100%; }
+      grid-template-columns: 100%;
+      border-radius: 0.8rem; }
       .res-post-con--grid--post--header {
+        margin-top: 0.5rem;
         width: 100%;
         height: 100%;
         display: grid;
         grid-template-rows: 100%;
-        grid-template-columns: 15% 60% 25%;
-        background-color: red; }
+        grid-template-columns: 15% 67% 18%; }
         .res-post-con--grid--post--header--img-con {
           width: 100%;
           height: 100%;
@@ -3109,8 +3111,7 @@ body {
             border-radius: 50%; }
         .res-post-con--grid--post--header--name-con {
           width: 100%;
-          height: 100%;
-          border: 2px solid green; }
+          height: 100%; }
           .res-post-con--grid--post--header--name-con--name {
             font-size: 1.4rem;
             color: #e3e6eb;
@@ -3124,19 +3125,14 @@ body {
         .res-post-con--grid--post--header--options {
           width: 100%;
           height: 100%;
-          background-color: gold;
           display: grid;
           grid-template-rows: 100%;
           grid-template-columns: repeat(2, 50%);
-          align-items: center;
-          justify-items: center;
-          align-content: center;
-          justify-content: center; }
+          padding-top: 0.7rem;
+          padding-left: 1rem; }
       .res-post-con--grid--post--main {
         width: 100%;
-        height: 100%;
-        background-color: blue; }
+        height: 100%; }
       .res-post-con--grid--post--footer {
         width: 100%;
-        height: 100%;
-        background-color: orange; }
+        height: 100%; }
