--- a/sass/mobile/post/res-post.scss
+++ b/sass/mobile/post/res-post.scss
@@ -13,20 +13,21 @@
         overflow: scroll;
 
         &--post {
-            width: 100%;
+            width: 97%;
+            margin-left: 0.5rem;
             height: 35rem;
             background-color: green;
             display: grid;
             grid-template-rows: 14% 73% 13%;
             grid-template-columns: 100%;
-
+border-radius: 0.8rem;
             &--header {
+                margin-top: 0.5rem;
                 width: 100%;
                 height: 100%;
                 display: grid;
                 grid-template-rows: 100%;
-                grid-template-columns: 15% 60% 25%;
-                background-color: red;
+                grid-template-columns: 15% 67% 18%;
 
                 &--img-con {
                     width: 100%;
@@ -49,7 +50,6 @@
                 &--name-con {
                     width: 100%;
                     height: 100%;
-                    border: 2px solid green;
 
                     &--name {
                         font-size: 1.4rem;
@@ -65,30 +65,26 @@
                         }
                     }
                 }
-                &--options{
+
+                &--options {
                     width: 100%;
                     height: 100%;
-                    background-color: gold;
                     display: grid;
                     grid-template-rows: 100%;
-                    grid-template-columns: repeat(2,50%);
-                    align-items: center;
-                    justify-items: center;
-                    align-content: center;
-                    justify-content: center;
+                    grid-template-columns: repeat(2, 50%);
+                     padding-top: 0.7rem;
+                     padding-left: 1rem;
                 }
             }
 
             &--main {
                 width: 100%;
                 height: 100%;
-                background-color: blue;
             }
 
             &--footer {
                 width: 100%;
                 height: 100%;
-                background-color: orange;
             }
         }
     }
