--- a/sass/mobile/post/res-post.scss
+++ b/sass/mobile/post/res-post.scss
@@ -1,7 +1,6 @@
 .res-post-con {
     width: 100vw;
     height: 100vh;
-    border: 2px solid red;
     margin-top: 0.5rem;
     overflow-y: scroll;
 
@@ -15,14 +14,14 @@
         &--post {
             width: 97%;
             margin-left: 0.5rem;
-            height: 35rem;
-            background-color: green;
+            height: 44rem;
+            background-color: #242526;
             display: grid;
-            grid-template-rows: 14% 73% 13%;
+            grid-template-rows: 14% 67% 19%;
             grid-template-columns: 100%;
-border-radius: 0.8rem;
+            border-radius: 0.8rem;
+
             &--header {
-                margin-top: 0.5rem;
                 width: 100%;
                 height: 100%;
                 display: grid;
@@ -55,8 +54,8 @@ border-radius: 0.8rem;
                         font-size: 1.4rem;
                         color: #e3e6eb;
                         font-weight: bold;
-                        font-family: 'Roboto';
-                        margin-top: 0.6rem;
+                        font-family: "Roboto";
+                        margin-top: 1rem;
 
                         &--time {
                             color: #b0b3b8;
@@ -72,20 +71,78 @@ border-radius: 0.8rem;
                     display: grid;
                     grid-template-rows: 100%;
                     grid-template-columns: repeat(2, 50%);
-                     padding-top: 0.7rem;
-                     padding-left: 1rem;
+                    padding-top: 1rem;
+                    padding-left: 1rem;
                 }
+            
+            
             }
 
             &--main {
                 width: 100%;
                 height: 100%;
+
+                &--img {
+                    height: 100%;
+                    width: 100%;
+                    object-fit: cover;
+
+                    &--img {
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                    }
+                }
             }
 
             &--footer {
+                border: 2px solid red;
                 width: 100%;
                 height: 100%;
+
+                &--grid {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    display: grid;
+                    grid-template-rows: repeat(2, 50%);
+                    grid-template-columns: 100%;
+                    &--reacted-con {
+                        display: grid;
+                        grid-template-rows: 100%;
+                        grid-template-columns: 6% 80%;
+                        padding-top: 0.8rem;
+                        &--icon {
+                        }
+                        &--txt {
+                            margin-left: 0.3rem;
+                            margin-top: -0.2rem;
+                            display: flex;
+                            align-items: center;
+                            align-content: center;
+                            font-family: "Roboto";
+                            font-weight: bold;
+                            font-size: 1.3rem;
+                            color: #e3e6eb;
+                        }
+                    }
+                    &--divider{
+                        background-color: rgba(128, 128, 128, 0.4);
+                        height: 0.1rem;
+                        width: 95%;
+                        margin-left: 0.8rem;
+                        margin-top: 0.2rem;
+                    
+                    }
+                    
+                }
+            
+             
             }
+
+            
         }
+        
     }
+    
 }
