--- a/css/style.css
+++ b/css/style.css
@@ -3148,7 +3148,7 @@ body {
           height: 100%;
           object-fit: cover;
           display: grid;
-          grid-template-rows: repeat(2, 50%);
+          grid-template-rows: 50% 3% 47%;
           grid-template-columns: 100%; }
           .res-post-con--grid--post--footer--grid--reacted-con {
             display: grid;
@@ -3171,3 +3171,28 @@ body {
             width: 95%;
             margin-left: 0.8rem;
             margin-top: 0.2rem; }
+          .res-post-con--grid--post--footer--grid--reaction {
+            width: 100%;
+            height: 100%; }
+            .res-post-con--grid--post--footer--grid--reaction--grid {
+              width: 100%;
+              height: 100%;
+              display: grid;
+              grid-template-rows: 100%;
+              grid-template-columns: repeat(3, 33.3%); }
+              .res-post-con--grid--post--footer--grid--reaction--grid--like-con {
+                width: 100%;
+                height: 100%;
+                background-color: goldenrod;
+                display: flex;
+                align-items: center;
+                align-content: center;
+                justify-items: center;
+                justify-content: center;
+                padding-right: 1.5rem; }
+                .res-post-con--grid--post--footer--grid--reaction--grid--like-con--txt {
+                  color: #e3e6eb;
+                  font-size: 1.5rem;
+                  font-weight: bold;
+                  font-family: 'Roboto';
+                  margin-left: 0.5rem; }
