--- a/sass/mobile/post/res-post.scss
+++ b/sass/mobile/post/res-post.scss
@@ -74,8 +74,6 @@
                     padding-top: 1rem;
                     padding-left: 1rem;
                 }
-            
-            
             }
 
             &--main {
@@ -105,15 +103,18 @@
                     height: 100%;
                     object-fit: cover;
                     display: grid;
-                    grid-template-rows: repeat(2, 50%);
+                    grid-template-rows: 50% 3% 47%;
                     grid-template-columns: 100%;
+
                     &--reacted-con {
                         display: grid;
                         grid-template-rows: 100%;
                         grid-template-columns: 6% 80%;
                         padding-top: 0.8rem;
+
                         &--icon {
                         }
+
                         &--txt {
                             margin-left: 0.3rem;
                             margin-top: -0.2rem;
@@ -126,23 +127,46 @@
                             color: #e3e6eb;
                         }
                     }
-                    &--divider{
+
+                    &--divider {
                         background-color: rgba(128, 128, 128, 0.4);
                         height: 0.1rem;
                         width: 95%;
                         margin-left: 0.8rem;
                         margin-top: 0.2rem;
-                    
                     }
-                    
-                }
-            
-             
-            }
 
-            
+                    &--reaction {
+                        width: 100%;
+                        height: 100%;
+                        &--grid {
+                            width: 100%;
+                            height: 100%;
+                            display: grid;
+                            grid-template-rows: 100%;
+                            grid-template-columns: repeat(3, 33.3%);
+                            &--like-con{
+                                width: 100%;
+                                height: 100%;
+                                background-color: goldenrod;
+                                display: flex;
+                                align-items: center;
+                                align-content: center;
+                                justify-items: center;
+                                justify-content: center;
+padding-right:1.5rem;    
+&--txt{
+    color: #e3e6eb;
+    font-size: 1.5rem;
+    font-weight: bold;
+    font-family: 'Roboto';
+    margin-left: 0.5rem;
+}        
+                            }
+                        }
+                    }
+                }
+            }
         }
-        
     }
-    
 }
